fdo#82502 Ctrl-F should select the text in the search bar, not close it

This reverts commit 1b375d580fb32739cc3b6625400337fa7380cdab.

Change-Id: Ica9851e66e8d8f32b8e353c0b2e541c7ce7d45e3